<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:background="@drawable/dialog"
    android:elevation="@dimen/_15sdp"
    android:orientation="vertical"
    android:padding="@dimen/_7sdp">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="end"
        android:background="@drawable/cerclebackground"
        android:gravity="center"
        android:text="@string/txtClose"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_8sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_minus10sdp"
        android:elevation="@dimen/_5sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:elevation="@dimen/_20sdp"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="@dimen/_2sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/asap_medium_italic"
            android:text="@string/quizOver"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_77sdp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/questions"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_77sdp"
            android:layout_weight="1"
            android:background="@color/green"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/correctQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/correct"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_77sdp"
            android:layout_weight="1"
            android:background="@color/red"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wrongQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/wrong"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="1"
            android:background="@color/pinkish"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/asap_medium_italic"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/yourScore"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="1"
            android:background="@color/deepSkyBlue"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/highScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/highScore"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="1"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/playagain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/button_play_again"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/playAgain"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold|italic"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="1"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/viewAnswer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/answer_button"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/view_answer"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold|italic"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_weight="1"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/mainmenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/button_main_menu"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/asap_medium_italic"
                android:text="@string/mainMenu"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold|italic"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>